@@ -12,7 +12,7 @@
       <h1><big><font color="#3c34ec">
         <i>NX Graphics Subsystem</i>
       </font></big></h1>
-      <p>Last Updated: March 20, 2010</p>
+      <p>Last Updated: July 10, 2011</p>
     </td>
   </tr>
 </table>
@@ -3014,7 +3014,7 @@ make
   <td align="left" valign="top"><a href="#nxmove"><code>nx_move()</code></a></td>
   <td>Change to <code>CONFIG_EXAMPLES_NX_RAWWINDOWS=y</code> in the
      <code>&lt;NuttX-Directory&gt;/.config</code> file</td>
-  <td align="center" bgcolor="lightgrey">NO</td>
+  <td align="center" bgcolor="skyblue">YES</td>
 </tr>
 <tr>
   <td align="left" valign="top"><a href="#nxbitmap"><code>nx_bitmap()</code></a></td>
